# ong_chrome_automation

./: README.md  pyproject.toml  requirements.txt
src/ong_chrome_automation/: __init__.py  capture_headers.py  exceptions.py  jupyter.py  local_chrome_browser.py  playwright_copilot.py
tests/: test_copilot.py
